--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,9 @@
-# Twilio Configuration
-TWILIO_ACCOUNT_SID=your_twilio_account_sid_here
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Twilio Configuration (for signature validation)
 TWILIO_AUTH_TOKEN=your_twilio_auth_token_here
 
-# Optional: For enhanced features
-TWILIO_PHONE_NUMBER=your_twilio_phone_number_here
+# Server Configuration
+PORT=8080
+NGROK_URL=your-ngrok-url.ngrok.io
